--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ task("docker-compose-file-release") {
     updateComposeFileImageVersion("docker-cloud.yml", newVersion)
     //updateComposeFileImageVersion("docker-cloud-prod.yml", releaseVersion)
     println grgit.commit(message: 'Update gradle and yml files version', all: true)
+    println grgit.push()
 }
 
 def updateComposeFileImageVersion(ymlfile, version) {
